feat: update TodoCard interactions and store state
- Mark task as done: text is crossed out and color tone reduced
- Swipe left → right marks task as done
- Swipe right → left opens delete; swiping left → right closes delete
- Update store to manage done, toggleTodo, and deleteTodo actions

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Willing To Do",
+    "name": "",
     "slug": "willing-to-do",
     "version": "1.0.0",
     "orientation": "portrait",
